--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/sohaleKing/SecurityCEV#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20"
