--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "querystring": "^0.2.1"
   }
 }
